# AutoMolsim

./: .gitignore  README.md  force_field.csv  main.py  run.py  run_post.py  setup.cfg  simulation.input
conf/: config.yaml
conf/machine/: fidis.yaml  local.yaml  lsmosrv.yaml
conf/task/: gcmc.yaml  henry.yaml  minimization.yaml  nvt.yaml
conf/zeo_params/: ch4.yaml  co2.yaml  n2.yaml
force_fields/UFFTraPPE/: force_field_mixing_rules.def  pseudo_atoms.def
outputs/2022-09-14/10-22-43/.hydra/: hydra.yaml
outputs/2022-09-14/10-28-07/.hydra/: config.yaml  hydra.yaml
outputs/2022-09-14/10-40-33/.hydra/: config.yaml  hydra.yaml
outputs/2022-09-14/10-40-52/.hydra/: hydra.yaml
outputs/2022-09-14/10-46-23/.hydra/: hydra.yaml
outputs/2022-09-14/10-46-59/.hydra/: config.yaml  hydra.yaml
outputs/2022-09-14/10-53-33/.hydra/: config.yaml  hydra.yaml
outputs/2022-09-14/13-40-08/.hydra/: hydra.yaml
outputs/2022-09-14/13-40-54/.hydra/: hydra.yaml
outputs/2022-09-14/13-41-51/.hydra/: hydra.yaml
outputs/2022-09-14/13-42-31/.hydra/: hydra.yaml
outputs/2022-09-14/13-43-44/.hydra/: config.yaml  hydra.yaml
outputs/2022-09-14/13-46-33/.hydra/: config.yaml  hydra.yaml
src/: cells.py  raspa.py  script.py
src/raspa_molsim/: cells.py  file_utils.py  grid_workchain_utils.py  postprocessing.py  raspa.py  run_workchain.py  running.py  script.py  zeo.py
src/snippet_pool/: gcmc.py
test_out/ABETIN_clean/: simulation.input
test_out/ABEXEN_clean/: run.sh  simulation.input
test_out/ABUWOJ_clean/: run.sh  simulation.input
(+88 files in other folders)
