##########################
# Setup.py Configuration #
##########################
[metadata]
name = raspa_molsim
version = 0.2-dev
description = Preprocessing and postprecessing for molecular simulations using RASPA
long_description = file: README.md

# URLs associated with the project
url = https://github.com/XiaoqZhang/AutoMolsim
download_url = https://github.com/XiaoqZhang/AutoMolsim/releases
project_urls =
    Bug Tracker = https://github.com/XiaoqZhang/AutoMolsim/issues
    Source Code = https://github.com/XiaoqZhang/AutoMolsim

# Author information
author = Xiaoqi Zhang
author_email = xiaoqi.zhang@epfl.ch
maintainer = Xiaoqi Zhang
maintainer_email = xiaoqi.zhang@epfl.ch

# License Information
license = MIT
license_file = LICENSE

# Search tags
keywords =
    RASPA
    molecule simulation

[options]
install_requires =
    numpy
    pymatgen
    pandas
    hydra-core
    wandb

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
